scrollbar fix

--- a/src/components/MarketTable/MarketTable.module.scss
+++ b/src/components/MarketTable/MarketTable.module.scss
@@ -140,7 +140,9 @@
     }
     &.fullWidth {
       width: 100%;
-      min-width: 110px;
+      padding: 0;
+      margin: 0;
+      min-width: 0;
       &.hide {
         display: none;
       }
@@ -198,7 +200,9 @@
     }
     &.fullWidth {
       width: 100%;
-      min-width: 110px;
+      padding: 0;
+      margin: 0;
+      min-width: 0;
       &.hide {
         display: none;
       }
